--- a/source/index.html
+++ b/source/index.html
@@ -79,11 +79,13 @@
                   <div class="hero__background">
                     <div class="hero__overlay"></div>
                     <picture>
-                      <source type="image/webp" media="(max-width: 767px)" srcset="./img/caucasus-mobile.webp 1x, ./img/caucasus-mobile@2x.webp 2x" width="350" height="568">
+                      <source type="image/webp" media="(max-width: 567px)" srcset="./img/caucasus-mobile.webp 1x, ./img/caucasus-mobile@2x.webp 2x" width="350" height="568">
+                      <source type="image/webp" media="(max-width: 767px)" srcset="./img/caucasus-mobile-2nd.webp 1x, ./img/caucasus-mobile-2nd@2x.webp 2x" width="568" height="420">
                       <source type="image/webp" media="(max-width: 1023px)" srcset="./img/caucasus-tablet.webp 1x, ./img/caucasus-tablet@2x.webp 2x" width="768" height="1024">
                       <source type="image/webp" media="(max-width: 1199px)" srcset="./img/caucasus-laptop.webp 1x, ./img/caucasus-laptop@2x.webp 2x" width="1024" height="1024">
                       <source type="image/webp" media="(min-width: 1200px)" srcset="./img/caucasus-desktop.webp 1x, ./img/caucasus-desktop@2x.webp 2x" width="1440" height="800">
-                      <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/caucasus-mobile.jpg 1x, ./img/caucasus-mobile@2x.jpg 2x" width="350" height="568">
+                      <source media="(max-width: 567px)" type="image/jpeg" srcset="./img/caucasus-mobile-2nd.jpg 1x, ./img/caucasus-mobile-2nd@2x.jpg 2x" width="350" height="568">
+                      <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/caucasus-mobile.jpg 1x, ./img/caucasus-mobile@2x.jpg 2x" width="568" height="420">
                       <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/caucasus-tablet.jpg 1x, ./img/caucasus-tablet@2x.jpg 2x" width="768" height="1024">
                       <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/caucasus-laptop.jpg 1x, ./img/caucasus-laptop@2x.jpg 2x" width="1024" height="1024">
                       <img src="./img/caucasus-desktop.jpg" srcset="./img/caucasus-desktop@2x.jpg 2x" type="image/jpeg" alt="Вид на Эльбрус." width="1440" height="800">
@@ -489,7 +491,7 @@
 
                   <div class="tours__swiper-slide tours__swiper-slide--adygea swiper-slide" tabindex="0">
                     <div class="tours__background">
-                      <div class="tours__overlay"></div>
+                      <div class="tours__overlay tours__overlay--secondary"></div>
                       <picture>
                         <source type="image/webp" media="(max-width: 767px)" srcset="./img/tours/fisht-mobile.webp 1x, ./img/tours/fisht-mobile@2x.webp 2x" width="320" height="416">
                         <source type="image/webp" media="(max-width: 1023px)" srcset="./img/tours/fisht-tablet.webp 1x, ./img/tours/fisht-tablet@2x.webp 2x" width="330" height="416">
@@ -901,7 +903,7 @@
                       <p>
                         С уверенностью могу сказать, что жизнь
                         разделилась на до этого и после. Ещё&nbsp;никогда
-                        не&nbsp;отдыхал так душой и&nbsp;телом. Всем очень
+                        не&nbsp;отдыхал так душой и&nbsp;телом.&nbsp;Всем очень
                         рекомендую!
                       </p>
                       <h3>Фролов Александр</h3>
@@ -929,7 +931,7 @@
                       </p>
                       <p>
                         Инструктор Федор дружелюбный, внимательный к технике
-                        безопасности и своим туристам. Всем советую этот тур.
+                        безопасности и&nbsp;своим туристам. Всем советую этот тур.
                       </p>
                       <h3>Иван Соловьев</h3>
                       <span>25 лет, Владивосток</span>
@@ -1004,69 +1006,70 @@
               <h2>Преимущества</h2>
               <span>Преимущества</span>
             </div>
-            <!-- Slider main container -->
-            <div class="advantages__swiper swiper">
-              <!-- Additional required wrapper -->
-              <ul class="advantages__swiper-wrapper swiper-wrapper">
-                <!-- Slides -->
-                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
-                  <div class="advantages__icon">
-                    <svg width="24" height="24" aria-hidden="true">
-                      <use href="./img/sprite.svg#icon-shield"></use>
-                    </svg>
-                  </div>
-                  <div class="advantages__text-wrapper">
-                    <h3>Безопасность и охрана</h3>
-                    <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и&nbsp;протоколы безопасности. Имеем планы действий на&nbsp;случай непредвиденных обстоятельств и&nbsp;даем гарантию полной безопасности во&nbsp;время всего тура.</p>
-                  </div>
-                </li>
-                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
-                  <div class="advantages__icon">
-                    <svg width="24" height="24" aria-hidden="true">
-                      <use href="./img/sprite.svg#icon-crown"></use>
-                    </svg>
-                  </div>
-                  <div class="advantages__text-wrapper">
-                    <h3>Экспертиза и знания</h3>
-                    <p>Наша команда опытных гидов имеет обширные знания о&nbsp;местности, погодных условиях и&nbsp;технике безопасности. Это гарантирует, что наши клиенты находятся в&nbsp;надежных руках и&nbsp;могут в&nbsp;полной мере насладиться опытом без опасений.</p>
-                  </div>
-                </li>
-                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
-                  <div class="advantages__icon advantages__icon--boots">
-                    <svg width="24" height="24" aria-hidden="true">
-                      <use href="./img/sprite.svg#icon-boots"></use>
-                    </svg>
-                  </div>
-                  <div class="advantages__text-wrapper">
-                    <h3>Оборудование и снаряжение</h3>
-                    <p>Мы&nbsp;предоставляем клиентам все необходимое оборудование, необходимое для путешествия. Это избавляет клиентов от&nbsp;необходимости покупать, брать с&nbsp;собой снаряжение, что делает путешествие более удобным и&nbsp;экономически выгодным.</p>
-                  </div>
-                </li>
-                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
-                  <div class="advantages__icon">
-                    <svg width="24" height="24" aria-hidden="true">
-                      <use href="./img/sprite.svg#icon-path"></use>
-                    </svg>
-                  </div>
-                  <div class="advantages__text-wrapper">
-                    <h3>Индивидуальные маршруты</h3>
-                    <p>Предлагает широкий выбор туров, отвечающих различным уровням мастерства и&nbsp;интересам. Мы&nbsp;также можем адаптировать маршруты к&nbsp;вашим конкретным потребностям и&nbsp;предпочтениям, чтобы вы&nbsp;получили индивидуальный опыт.</p>
-                  </div>
-                </li>
-                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
-                  <div class="advantages__icon">
-                    <svg width="24" height="24" aria-hidden="true">
-                      <use href="./img/sprite.svg#icon-leaf"></use>
-                    </svg>
-                  </div>
-                  <div class="advantages__text-wrapper">
-                    <h3>Бережное отношение к&nbsp;природе</h3>
-                    <p>Уделяем первостепенное внимание охране окружающей среды и&nbsp;гарантируем, что туры оказывают минимальное воздействие на&nbsp;природную среду. Наша компания следует принципу &laquo;Не&nbsp;оставлять следов&raquo;.</p>
-                  </div>
-                </li>
-              </ul>
+            <div class="advantages__inner-wrapper">
+              <!-- Slider main container -->
+              <div class="advantages__swiper swiper">
+                <!-- Additional required wrapper -->
+                <ul class="advantages__swiper-wrapper swiper-wrapper">
+                  <!-- Slides -->
+                  <li class="advantages__swiper-slide swiper-slide" tabindex="0">
+                    <div class="advantages__icon">
+                      <svg width="24" height="24" aria-hidden="true">
+                        <use href="./img/sprite.svg#icon-shield"></use>
+                      </svg>
+                    </div>
+                    <div class="advantages__text-wrapper">
+                      <h3>Безопасность</h3>
+                      <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и&nbsp;протоколы безопасности. Имеем планы действий на&nbsp;случай непредвиденных обстоятельств и&nbsp;даем гарантию полной безопасности во&nbsp;время всего тура.</p>
+                    </div>
+                  </li>
+                  <li class="advantages__swiper-slide swiper-slide" tabindex="0">
+                    <div class="advantages__icon">
+                      <svg width="24" height="24" aria-hidden="true">
+                        <use href="./img/sprite.svg#icon-crown"></use>
+                      </svg>
+                    </div>
+                    <div class="advantages__text-wrapper">
+                      <h3>Экспертиза и знания</h3>
+                      <p>Наша команда опытных гидов имеет обширные знания о&nbsp;местности, погодных условиях и&nbsp;технике безопасности. Это гарантирует, что&nbsp;наши клиенты находятся в&nbsp;надежных руках и&nbsp;могут в&nbsp;полной мере насладиться опытом без&nbsp;опасений.</p>
+                    </div>
+                  </li>
+                  <li class="advantages__swiper-slide swiper-slide" tabindex="0">
+                    <div class="advantages__icon advantages__icon--boots">
+                      <svg width="24" height="24" aria-hidden="true">
+                        <use href="./img/sprite.svg#icon-boots"></use>
+                      </svg>
+                    </div>
+                    <div class="advantages__text-wrapper">
+                      <h3>Оборудование и снаряжение</h3>
+                      <p>Мы предоставляем клиентам все&nbsp;необходимое оборудование, необходимое для путешествия. Это&nbsp;избавляет клиентов от&nbsp;необходимости покупать, брать с&nbsp;собой снаряжение, что&nbsp;делает путешествие более удобным и&nbsp;экономически выгодным.</p>
+                    </div>
+                  </li>
+                  <li class="advantages__swiper-slide swiper-slide" tabindex="0">
+                    <div class="advantages__icon">
+                      <svg width="24" height="24" aria-hidden="true">
+                        <use href="./img/sprite.svg#icon-path"></use>
+                      </svg>
+                    </div>
+                    <div class="advantages__text-wrapper">
+                      <h3>Индивидуальные маршруты</h3>
+                      <p>Предлагает широкий выбор туров, отвечающих различным уровням мастерства и&nbsp;интересам. <br> Мы&nbsp;также можем адаптировать маршруты к&nbsp;вашим конкретным потребностям и&nbsp;предпочтениям, чтобы&nbsp;вы&nbsp;получили индивидуальный опыт.</p>
+                    </div>
+                  </li>
+                  <li class="advantages__swiper-slide swiper-slide" tabindex="0">
+                    <div class="advantages__icon">
+                      <svg width="24" height="24" aria-hidden="true">
+                        <use href="./img/sprite.svg#icon-leaf"></use>
+                      </svg>
+                    </div>
+                    <div class="advantages__text-wrapper">
+                      <h3>Бережное отношение <br> к&nbsp;природе</h3>
+                      <p>Уделяем первостепенное внимание охране окружающей среды и&nbsp;гарантируем, что туры оказывают минимальное воздействие на природную среду. Наша компания следует принципу &laquo;Не&nbsp;оставлять следов&raquo;.</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
-
             <div class="advantages__swiper-buttons">
               <button class="advantages__swiper-button advantages__swiper-button--prev" type="button">
                 <svg width="15" height="9">
@@ -1267,7 +1270,7 @@
                       <use href="./img/sprite.svg#pin"></use>
                     </svg>
                     <h3>Адрес</h3>
-                    <p>г. Москва, пр-т Мира, д. 14, офис 101</p>
+                    <p>г. Москва, пр-т Мира,<br> д. 14, офис 101</p>
                   </li>
                 </ul>
               </div>
