--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
 
       <main class="main">
-        <div data-test=”hero”>
+        <div data-test="hero">
           <header class="header header--nojs">
             <div class="container">
               <div class="header__wrapper">
@@ -247,7 +247,7 @@
           </section>
         </div>
 
-        <section class="main__tours tours" id="tours" data-test=”tours”>
+        <section class="main__tours tours" id="tours" data-test="tours">
           <div class="container">
             <div class="tours__wrapper">
               <div class="tours__title-wrapper">
@@ -584,7 +584,7 @@
           </div>
         </section>
 
-        <section class="main__education education" id="education" data-test=”training”>
+        <section class="main__education education" id="education" data-test="training">
           <div class="container">
             <div class="education__wrapper">
               <div class="education__text-wrapper" >
@@ -818,7 +818,7 @@
         </section>
 
 
-        <section class="main__about-us about-us" id="about-us" data-test=”about”>
+        <section class="main__about-us about-us" id="about-us" data-test="about">
           <div class="container">
             <div class="about-us__wrapper">
               <div class="about-us__content-wrapper">
@@ -857,7 +857,7 @@
           </div>
         </section>
 
-        <section class="main__reviews reviews" id="reviews" data-test=”reviews”>
+        <section class="main__reviews reviews" id="reviews" data-test="reviews">
           <div class="container">
             <div class="reviews__wrapper">
               <div class="reviews__title-wrapper">
@@ -1000,7 +1000,7 @@
           </div>
         </section>
 
-        <section class="main__advantages advantages" data-test=”adv”>
+        <section class="main__advantages advantages" data-test="adv">
           <div class="advantages__container container">
             <div class="advantages__title-wrapper">
               <h2>Преимущества</h2>
@@ -1106,7 +1106,7 @@
         </section>
 
 
-        <section class="main__gallery gallery" id="gallery" data-test=”gallery”>
+        <section class="main__gallery gallery" id="gallery" data-test="gallery">
           <div class="gallery__wrapper">
             <div class="gallery__inner-wrapper">
               <div class="gallery__title-wrapper">
@@ -1196,7 +1196,7 @@
         </section>
 
 
-        <section class="main__consultation-form consultation-form" data-test=”form”>
+        <section class="main__consultation-form consultation-form" data-test="form">
           <div class="container">
             <div class="consultation-form__wrapper">
               <div class="consultation-form__background">
@@ -1237,7 +1237,7 @@
           </div>
         </section>
 
-        <div data-test=”footer”>
+        <div data-test="footer">
           <section class="main__contacts contacts" id="contacts">
             <div class="contacts__wrapper">
               <div class="contacts__text-wrapper">
