--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
                       </p>
                       <a href="#" class="hero__btn btn">Смотреть тур</a>
                       <div class="hero__video-wrapper">
-                        <div class="hero__video-poster" data-poster>
+                        <div class="hero__video-poster" data-poster="">
                           <picture>
                             <source media="(max-width: 1119px)" type="image/webp" srcset="./img/poster-video-tablet.webp 1x, ./img/poster-video-tablet@2x.webp 2x" width="442" height="300">
                             <source media="(min-width: 1440px)" type="image/webp" srcset="./img/poster-video.webp 1x, ./img/poster-video@2x.webp 2x" width="482" height="317">
@@ -109,14 +109,14 @@
                             <img src="./img/poster-video.jpg" srcset="./img/poster-video.jpg 1x, ./img/poster-video@2x.jpg 2x" width="482" height="317" alt="Постер к видео о Кавказе.">
                           </picture>
                         </div>
-                        <iframe width="482" height="317" data-video
+                        <iframe width="482" height="317" data-video=""
                           title="YouTube video player"
                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                           allowfullscreen
                           loading="lazy"
                           tabindex="-1">
                         </iframe>
-                        <button class="hero__video-button" data-play-button aria-label="Запустить видео.">
+                        <button class="hero__video-button" data-play-button="" aria-label="Запустить видео." type="button">
                           <svg width="12" height="22">
                             <use href="img/sprite.svg#video-button"></use>
                           </svg>
@@ -160,12 +160,12 @@
                         вы&nbsp;отправитесь в&nbsp;путешествие по одному из&nbsp;самых
                         нетронутых уголков дикой природы&nbsp;в&nbsp;мире.
                       </p>
-                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <a class="hero__btn btn" href="#">Смотреть тур</a>
                       <div class="hero__photo-first">
                         <picture>
                           <source type="image/webp" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-1-tablet.webp 1x, ./img/kamchatka-photo-1-tablet@2x.webp 2x" width="266" height="351">
                           <source type="image/webp" srcset="./img/kamchatka-photo-1-desktop.webp 1x, ./img/kamchatka-photo-1-desktop@2x.webp 2x" width="308" height="407">
-                          <source media="(max-width: 1199px)" srcset="./img/kamchatka-photo-1-tablet.png 1x, ./img/kamchatka-photo-1-tablet@2x.png 2x" width="266" height="351">
+                          <source type="image/png" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-1-tablet.png 1x, ./img/kamchatka-photo-1-tablet@2x.png 2x" width="266" height="351">
                           <img class="swiper__slide-img" src="./img/kamchatka-photo-1-desktop.png" srcset="./img/kamchatka-photo-1-desktop@2x.png 2x" width="308" height="407" alt="Озеро в горах на Камчатке.">
                         </picture>
                       </div>
@@ -173,7 +173,7 @@
                         <picture>
                           <source type="image/webp" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-2-tablet.webp 1x, ./img/kamchatka-photo-2-tablet@2x.webp 2x" width="236" height="312">
                           <source type="image/webp" srcset="./img/kamchatka-photo-2-desktop.webp 1x, ./img/kamchatka-photo-2-desktop@2x.webp 2x" width="277" height="366">
-                          <source media="(max-width: 1199px)" srcset="./img/kamchatka-photo-2-tablet.png 1x, ./img/kamchatka-photo-2-tablet@2x.png 2x" width="236" height="312">
+                          <source type="image/png" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-2-tablet.png 1x, ./img/kamchatka-photo-2-tablet@2x.png 2x" width="236" height="312">
                           <img class="swiper__slide-img" src="./img/kamchatka-photo-2-desktop.png" srcset="./img/kamchatka-photo-2-desktop@2x.png 2x" width="277" height="366" alt="Турист в горах на Камчатке.">
                         </picture>
                       </div>
@@ -215,9 +215,10 @@
                         приключение с&nbsp;посещением магических
                         и&nbsp;захватывающих дух ландшафтов Алтайских гор.
                       </p>
-                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <a class="hero__btn btn" href="#">Смотреть тур</a>
                       <div class="hero__audio-wrapper">
                         <iframe width="340" height="220"
+                          title="Yandex music player"
                           src="https://music.yandex.ru/iframe/album/25474374"
                           loading="lazy">
                         </iframe>
@@ -1295,7 +1296,7 @@
             <div class="container">
               <div class="footer__wrapper">
                 <div class="footer__links">
-                  <a href="index.html" class="footer__logo-link">
+                  <a class="footer__logo-link" href="index.html">
                     <svg width="142" height="42">
                       <use href="./img/sprite.svg#logo-footer"></use>
                     </svg>
@@ -1320,25 +1321,25 @@
                       <a class="footer__link" href="#contacts">Контакты</a>
                     </li>
                   </ul>
-                  <a href="tel:88007253232" class="footer__phone-link">8 800 725-32-32</a>
+                  <a class="footer__phone-link" href="tel:88007253232">8 800 725-32-32</a>
                 </div>
                 <ul class="footer__social-list">
                   <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">
+                    <a class="footer__social-link" href="#">
                       <svg width="16" height="9">
                         <use href="./img/sprite.svg#vk"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">
+                    <a class="footer__social-link" href="#">
                       <svg width="9" height="16">
                         <use href="./img/sprite.svg#ok"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">
+                    <a class="footer__social-link" href="#">
                       <svg width="14" height="15">
                         <use href="./img/sprite.svg#reddit"></use>
                       </svg>
