--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
                         через&nbsp;потрясающие ландшафты и совершите
                         восход на&nbsp;вершину горы Чегет.
                       </p>
-                      <a href="#" class="hero__btn btn">Смотреть тур</a>
+                      <a class="hero__btn btn" href="#">Смотреть тур</a>
                       <div class="hero__video-wrapper">
                         <div class="hero__video-poster" data-poster="">
                           <picture>
@@ -149,7 +149,7 @@
                         <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/kamchatka-mobile.jpg 1x, ./img/kamchatka-mobile@2x.jpg 2x" width="350" height="568">
                         <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/kamchatka-tablet.jpg 1x, ./img/kamchatka-tablet@2x.jpg 2x" width="768" height="1024">
                         <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/kamchatka-laptop.jpg 1x, ./img/kamchatka-laptop@2x.jpg 2x" width="1024" height="1024">
-                        <img src="./img/kamchatka-desktop.jpg" srcset="./img/kamchatka-desktop@2x.jpg 2x" alt="Природа и вершины на Камчатке." width="1440" height="800">
+                        <img src="./img/kamchatka-desktop.jpg" srcset="./img/kamchatka-desktop@2x.jpg 2x" alt="Природа и вершины на Камчатке." width="1440" height="800" loading="lazy">
                       </picture>
                     </div>
                     <div class="hero__info">
@@ -165,7 +165,7 @@
                           <source type="image/webp" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-1-tablet.webp 1x, ./img/kamchatka-photo-1-tablet@2x.webp 2x" width="266" height="351">
                           <source type="image/webp" srcset="./img/kamchatka-photo-1-desktop.webp 1x, ./img/kamchatka-photo-1-desktop@2x.webp 2x" width="308" height="407">
                           <source type="image/png" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-1-tablet.png 1x, ./img/kamchatka-photo-1-tablet@2x.png 2x" width="266" height="351">
-                          <img class="swiper__slide-img" src="./img/kamchatka-photo-1-desktop.png" srcset="./img/kamchatka-photo-1-desktop@2x.png 2x" width="308" height="407" alt="Озеро в горах на Камчатке.">
+                          <img class="swiper__slide-img" src="./img/kamchatka-photo-1-desktop.png" srcset="./img/kamchatka-photo-1-desktop@2x.png 2x" width="308" height="407" alt="Озеро в горах на Камчатке." loading="lazy">
                         </picture>
                       </div>
                       <div class="hero__photo-second">
@@ -173,7 +173,7 @@
                           <source type="image/webp" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-2-tablet.webp 1x, ./img/kamchatka-photo-2-tablet@2x.webp 2x" width="236" height="312">
                           <source type="image/webp" srcset="./img/kamchatka-photo-2-desktop.webp 1x, ./img/kamchatka-photo-2-desktop@2x.webp 2x" width="277" height="366">
                           <source type="image/png" media="(max-width: 1199px)" srcset="./img/kamchatka-photo-2-tablet.png 1x, ./img/kamchatka-photo-2-tablet@2x.png 2x" width="236" height="312">
-                          <img class="swiper__slide-img" src="./img/kamchatka-photo-2-desktop.png" srcset="./img/kamchatka-photo-2-desktop@2x.png 2x" width="277" height="366" alt="Турист в горах на Камчатке.">
+                          <img class="swiper__slide-img" src="./img/kamchatka-photo-2-desktop.png" srcset="./img/kamchatka-photo-2-desktop@2x.png 2x" width="277" height="366" alt="Турист в горах на Камчатке." loading="lazy">
                         </picture>
                       </div>
                       <div class="hero__desc">
@@ -204,7 +204,7 @@
                         <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/altai-mobile.jpg 1x, ./img/altai-mobile@2x.jpg 2x" width="350" height="568">
                         <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/altai-tablet.jpg 1x, ./img/altai-tablet@2x.jpg 2x" width="768" height="1024">
                         <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/altai-laptop.jpg 1x, ./img/altai-laptop@2x.jpg 2x" width="1024" height="1024">
-                        <img src="./img/altai-desktop.jpg" srcset="./img/altai-desktop@2x.jpg 2x" alt="Алтайские горы." width="1440" height="800">
+                        <img src="./img/altai-desktop.jpg" srcset="./img/altai-desktop@2x.jpg 2x" alt="Алтайские горы." width="1440" height="800" loading="lazy">
                       </picture>
                     </div>
                     <div class="hero__info">
@@ -1077,7 +1077,7 @@
                       <p>
                         Предлагает широкий выбор туров,
                         отвечающих различным уровням мастерства
-                        и&nbsp;интересам. <br> Мы&nbsp;также можем адаптировать
+                        и&nbsp;интересам.<br>Мы&nbsp;также можем адаптировать
                         маршруты к&nbsp;вашим конкретным
                         потребностям и&nbsp;предпочтениям,
                         чтобы&nbsp;вы&nbsp;получили индивидуальный опыт.
